kubernetes/alertmanager/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: alertmanager
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: alertmanager
      app.kubernetes.io/instance: alertmanager
  template:
    metadata:
      name: alertmanager
      labels:
        app.kubernetes.io/name: alertmanager
        app.kubernetes.io/instance: alertmanager
    spec:
      containers:
      - name: alertmanager
        image: prom/alertmanager:v0.34.1@sha256:e9733bafb1bdef9b00e25a21f8f99dc26a22224bf16641ad754d1649f4c3357a
        args:
        - --config.file=/config/config.yaml
        - --storage.path=/alertmanager
        - --web.external-url=https://alertmanager.k.oneill.net
        ports:
        - name: alertmanager
          containerPort: 9093
        volumeMounts:
        - name: config
          mountPath: /config
        - name: secrets
          mountPath: /secrets
          readOnly: true
        - name: templates
          mountPath: /etc/alertmanager-templates
        - name: alertmanager-data
          mountPath: /alertmanager
      volumes:
      - name: config
        configMap:
          name: alertmanager
      - name: secrets
        secret:
          secretName: alertmanager
      - name: templates
        configMap:
          name: alertmanager-templates
      - name: alertmanager-data
        persistentVolumeClaim:
          claimName: alertmanager-data
